Fixed product cards and order summary overlapping to cart

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,8 @@ ul {
 .image-fixed-wh {
   display: block;
   width: 100%;
-  height: 300px;
+  height: 250px;
+  object-fit: contain;
 }
 .price {
   font-weight: bold;
@@ -446,6 +447,8 @@ tfoot td {
 }
 .stores tfoot {
   font-weight: bold;
+  background-color: var(--primaryColor);
+  color: white;
 }
 .stores-table th {
   min-width: 150px;
@@ -865,6 +868,10 @@ hr {
   }
   .about .description {
     padding: 0;
+  }
+  .wrapper-40 {
+    float: none;
+    margin-top: 30px;
   }
 
   /* footer */
